<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/boundary">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:padding="1dp"
        android:id="@+id/imageView_mImage"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/movie_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:id="@+id/textView_movieTitle"
        android:text="@string/movie_title"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView_mImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_releaseDate_label"
        android:text="@string/releaseDate_label"
        android:layout_toEndOf="@id/imageView_mImage"
        android:layout_below="@+id/textView_movieTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_releaseDate"
        android:text="@string/releaseDate"
        android:layout_toEndOf="@id/textView_releaseDate_label"
        android:layout_below="@+id/textView_movieTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_popularity_label"
        android:text="@string/popularity"
        android:layout_toEndOf="@id/imageView_mImage"
        android:layout_below="@+id/textView_releaseDate_label" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar_popularity"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:stepSize="0.05"
        android:rating="0"
        android:isIndicator="true"
        android:paddingTop="5dp"
        android:layout_alignBottom="@id/textView_popularity_label"
        android:layout_below="@+id/textView_releaseDate_label"
        android:layout_toEndOf="@+id/textView_popularity_label" />

    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:id="@+id/imageView_voteCount"
        android:src="@drawable/ic_star"
        android:layout_toEndOf="@+id/imageView_mImage"
        android:layout_below="@+id/textView_popularity_label"
        android:contentDescription="@string/rating_votecount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/votecount"
        android:id="@+id/textView_voteCount"
        android:paddingTop="6dp"
        android:layout_below="@+id/ratingBar_popularity"
        android:layout_toEndOf="@+id/imageView_voteCount" />

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressbar"
        android:indeterminate="true"
        android:layout_above="@+id/imageView_voteCount"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp" />

</RelativeLayout>